<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInfoNav">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingVertical="12dp"
        android:background="@color/action_bar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="28sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/primary_text"
            android:text="@string/action_bar_name" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/baseline_edit_30"
            android:contentDescription="@string/edit_user_infio_nav" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:srcCompat="@drawable/baseline_delete_30"
            android:contentDescription="@string/delete_user_info_nav" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/details_style"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            style="@style/details_style"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            style="@style/details_style"
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            style="@style/details_style"
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />


    </LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:backgroundTint="@color/transaction_btn"
        android:layout_marginBottom="20dp"
        android:text="@string/transaction_details_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/receive_btn"
            android:text="@string/received_btn_user_info"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@color/add_money_btn"
            android:text="@string/add_btn_user_info" />
    </LinearLayout>
</LinearLayout>