<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:background="@color/action_bar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="28sp"
            android:textColor="@color/primary_text"
            android:text="@string/action_bar_name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/add_new_content_description"
            android:src="@drawable/baseline_add_30"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:contentDescription="backup"
            android:onClick="backup"
            app:srcCompat="@drawable/baseline_backup_30" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="5dp"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/searchViewMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bg"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:layout_marginVertical="15dp"
            android:queryHint="@string/search_hint">

        </SearchView>

        <TextView
            android:id="@+id/textViewEmptyResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_result_found" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCustomerList"
            android:layout_marginHorizontal="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>