<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNew">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:textSize="28sp"
            android:layout_marginBottom="20dp"
            android:text="New" />

        <EditText
            style="@style/input_style"
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 ()_@"
            android:inputType="textCapSentences"
            android:maxLength="30"
            android:hint="@string/add_new_name" />

        <TextView
            style="@style/error_message"
            android:id="@+id/textViewNameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="" />

        <EditText
            style="@style/input_style"
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/add_new_mobile_number"/>

        <TextView
            style="@style/error_message"
            android:id="@+id/textViewMobileError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="" />

        <Button
            style="@style/submit_button"
            android:id="@+id/button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_create_btn" />
    </LinearLayout>
</LinearLayout>